--- a/css/index.css
+++ b/css/index.css
@@ -105,3 +105,56 @@ body {
   color: black;
 
 }
+
+.wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%;
+}
+
+
+.navitem {
+    float: left;
+  border-right: 5% solid #bbb;
+  font-size: large;
+}
+
+.navitem:hover {
+  background-color: #AA11AA;
+}
+
+.navitem:last-child {
+  border-right: none;
+}
+
+.navitem a {
+  display:block;
+  color:white;
+  text-align: center;
+  padding: 1em 3em;
+  text-decoration: none;
+}
+
+.post-container {
+    margin: 20px 20px 0 0;
+    overflow: auto;
+}
+.post-thumb {
+    float: left;
+}
+.post-thumb img {
+    display: block;
+    padding: 25px;
+}
+.post-content {
+    margin-left: 210px;
+}
+.post-title {
+    font-weight: bold;
+    font-size: 200%;
+}
+
+img {
+  width: 700px;
+  height: auto;
+}
