--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: monospace;
+}
 
 
 /* Container holding the image and the text */
@@ -25,6 +30,13 @@
     text-shadow: 5px 5px 20px #000000;
     text-decoration: overline grey;
 }
+
+
+
+.bilder{
+  background-image: url("img/konsert.jpg");
+}
+
 }
 a {
 font-family: Impact;
@@ -38,11 +50,7 @@ text-decoration: none;
 
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: monospace;
-}
+
 .navigation {
     width: 100%;
     position: fixed;
@@ -78,15 +86,44 @@ body {
   text-decoration: none;
 }
 
-@media only screen and (max-width: 768px) {
-  .navigation{
-    flex-direction: column;
-    float: left;
-    text-align: left;
-  }
+.container2{
+  max-width: 1060px;
+  margin: 0 auto;
+  background: #dddddd;
+  padding: 50px;
+  z-index: 1;
+  background: linear-gradient(white, #cecece, #cecece, white);
 }
 
 
+.bilder{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.bilder img {
+  width: 700px;
+  height: auto;
+  margin-top: 5%;
+  position: relative;
+  margin: 10px;
+}
+
+.konsert1{
+  margin-top: 5%;
+  text-align: center;
+}
+
+.konsert:hover {
+  background-color: #adadad;
+  color: white;
+}
+
+.konsert, .konsert h1, .konsert p{
+  transition: all 0.2s ease-in-out;
+}
 
 #map {
   height: 80%;
@@ -107,32 +144,27 @@ body {
   color: black;
 }
 
-.wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  width: 85%;
+@media only screen and (max-width: 768px){
+  #centered{
+    font-size: 2em;
+    margin-top: 1em;
+  }
+  #bakgrunn{
+    margin-top: 3em;
+  }
+  .navigation{
+      flex-direction: column;
+      text-align: left;
+    }
+  .bilder{
+      margin-top: 12%;
+    }
+
 }
 
-.post-container {
-    margin: 20px 20px 0 0;
-    overflow: auto;
-}
-.post-thumb {
-    float: left;
-}
-.post-thumb img {
-    display: block;
-    padding: 25px;
-}
-.post-content {
-    margin-left: 210px;
-}
-.post-title {
-    font-weight: bold;
-    font-size: 200%;
-}
-
-img {
-  width: 700px;
-  height: auto;
+@media only screen and (max-width: 968px){
+  .navigation{
+    flex-direction: row;
+    text-align: center;
+  }
 }
