--- a/css/index.css
+++ b/css/index.css
@@ -133,7 +133,7 @@ text-decoration: none;
 
 #map {
   background-color: black;
-  height: 80%;
+  height: 800px;
   width: 80%;
   left: 10%;
   top: 10%;
