--- a/css/common.css
+++ b/css/common.css
@@ -23,12 +23,6 @@ font-size: 24px;
 text-decoration: none;
 }
 
-a:hover {
-color: green;
-text-decoration: none;
-
-}
-
 
 #navitem {
   float: left;
@@ -50,4 +44,126 @@ text-decoration: none;
   text-align: center;
   padding: 1em 3em;
   text-decoration: none;
+}
+
+#hamburger{
+  display: none;
+}
+
+@media only screen and (max-width: 768px){
+#hamburger{
+  display: block;
+}
+
+#navitem a {
+  display:none;
+  color:white;
+  text-align: center;
+  padding: 1em 3em;
+  text-decoration: none;
+}
+
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 15px;
+  left: 15px;
+
+  z-index: 1;
+
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0;
+  z-index: 2;
+
+  -webkit-touch-callout: none;
+}
+
+#menuToggle span
+{
+  display: block;
+  width: 35px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: black;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menu
+{
+  position: absolute;
+  width: 100px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+
+  background: black;
+  transform: translate(-50%, -50%);
+  opacity: 0.8;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
 }
