--- a/css/index.css
+++ b/css/index.css
@@ -1,41 +1,32 @@
-/* Container som holder både bakgrunnsbildet og tekst */
+/* Container for bakgrunnsbilde og tekst */
 
 .container {
+  display: flex;
   margin: 0;
-  position: relative;
   text-align: center;
-  font-family: Arial black;
-  letter-spacing: 1.5em;
+  letter-spacing: 1.25em;
 }
 
-/*Overskrift til forside*/
-
+/*Formatering av bildet*/
+#bg {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+/*Formatering av overskrift */
 #centered {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 5em;
-  opacity: 0.7;
-  color: white;
-  text-shadow: 5px 5px 20px #000000;
-  text-decoration: overline grey;
-}
-
-/*Endring av utseende på bildet. Gjort det noe varmere*/
-
-#bakgrunn {
-  filter: brightness(70%) contrast(170%);
+  top: 30%;
+  left: 10%;
+  right: 10%;
+  font-size: 12.5vh;
+  text-decoration: overline crimson;
 }
 
 /*Endring av størrelsesforhold bilde/tekst ved resizing til mobil*/
 
-@media only screen and (max-width: 768px) {
+@media only screen (min-width: 768px) and (max-width: 1280px) {
   #centered {
-    font-size: 2em;
-    margin-top: 1em;
+    /*font-size: 2em;*/
+    /*margin-top: 1em;*/
   }
-  #bakgrunn {
-    margin-top: 3em;
-  }
-}
