Fikset resizing av forside.

--- a/css/common.css
+++ b/css/common.css
@@ -38,6 +38,7 @@ a {
   background-color: crimson;
 }
 
+
 #navitem:last-child {
   border-right: none;
 }
@@ -60,18 +61,21 @@ a {
   #hamburger {
     display: block;
   }
-  #navitem a {
+
+  #navitem {
     display: none;
   }
+
   #menuToggle {
     display: block;
-    position: relative;
+    position: fixed;
     top: 15px;
     left: 15px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
   }
+
   #menuToggle input {
     display: block;
     width: 40px;
@@ -84,6 +88,7 @@ a {
     z-index: 2;
     -webkit-touch-callout: none;
   }
+
   #menuToggle span {
     display: block;
     width: 35px;
@@ -96,21 +101,26 @@ a {
     transform-origin: 4px 0px;
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
   }
+
   #menuToggle span:first-child {
     transform-origin: 0% 0%;
   }
+
   #menuToggle span:nth-last-child(2) {
     transform-origin: 0% 100%;
   }
+
   #menuToggle input:checked~span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
     background: #232323;
   }
+
   #menuToggle input:checked~span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
   }
+
   #menu {
     color: black;
     position: absolute;
@@ -127,10 +137,12 @@ a {
     transform: translate(-100%, 0);
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
   }
+
   #menu li {
     padding: 10px 0;
     font-size: 22px;
   }
+
   #menuToggle input:checked~ul {
     transform: none;
   }
